# python-kingclient

./: .gitignore  CONTRIBUTING.rst  README.rst  openstack-common.conf  setup.cfg  tox.ini
kingclient/: __init__.py  client.py  exc.py  shell.py
kingclient/common/: hook_utils.py  http.py  utils.py
kingclient/openstack/common/: _i18n.py  cliutils.py
kingclient/openstack/common/apiclient/: auth.py  base.py  client.py  exceptions.py  fake_client.py  utils.py
kingclient/osc/: plugin.py
kingclient/osc/v1/: service.py
kingclient/v1/: __init__.py  accounts.py  client.py  orders.py  prices.py  quota.py  services.py  shell.py  volume.py
