[metadata]
name = python-kingclient
summary = OpenStack Orchestration API Client Library
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    kingclient

[entry_points]
console_scripts =
    king = kingclient.shell:main

openstack.cli.extension =
    orchestration = kingclient.osc.plugin


[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = kingclient/locale/kingclient.pot

[compile_catalog]
directory = kingclient/locale
domain = kingclient

[update_catalog]
domain = kingclient
output_dir = kingclient/locale
input_file = kingclient/locale/kingclient.pot
